Bug 12418 - smbclient doesn't honour 'disable netbios' smb.conf param for '-L' diirective
Summary: smbclient doesn't honour 'disable netbios' smb.conf param for '-L' diirective
Status: RESOLVED FIXED
Alias: None
Product: Samba 4.1 and newer
Classification: Unclassified
Component: Tools (show other bugs)
Version: unspecified
Hardware: All All
: P5 normal (vote)
Target Milestone: ---
Assignee: Andrew Bartlett
QA Contact: Samba QA Contact
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-11-10 09:04 UTC by Noel Power
Modified: 2017-06-29 13:23 UTC (History)
1 user (show)

See Also:


Attachments
patch for master (1.13 KB, patch)
2016-11-10 09:08 UTC, Noel Power
no flags Details

Note You need to log in before you can comment on or make changes to this bug.
Description Noel Power 2016-11-10 09:04:53 UTC
when you issue a smbclient -U$USER%$PASS -L //$SERVER cmd and you have global option 'disable netbios = true' then you will always get and error like

Connection to [SERVER] failed (Error NT_STATUS_UNSUCCESSFUL)
NetBIOS over TCP disabled -- no workgroup available
Comment 1 Noel Power 2016-11-10 09:08:13 UTC
Created attachment 12639 [details]
patch for master
Comment 2 Stefan Metzmacher 2017-06-29 13:23:40 UTC
Fixed as 15fa802c771513fa535f9c825bcbdcdcc73ae66a for master / 4.7